--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-<a href="generate.php?CODEXWORLD">Generate download link</a>
+<a href="https://raw.githubusercontent.com/DarpanPhotoState/test2/main/1200px-Logo_of_YouTube_(2015-2017).svg.png">Generate download link</a>
     </head>
       <body>
         </body>
